fix css issue that caused page to flicker

--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 header a {
   text-decoration: none;
   padding: 0.5rem 0.5rem;
